programming-language/workspace/compiler/tests/fixtures/invalid/type_mismatch.cb64
# Type mismatch
def main():
    x: byte = "string"
